Se usa elemento y 'import' para hacer el header de cada pagina.

--- a/src/pages/misservicios.astro
+++ b/src/pages/misservicios.astro
@@ -1,22 +1,13 @@
 ---
 import Card from '../componentes/card.astro'
+import Layout from "../componentes/layout.astro"
 
 ---
 
+    <Layout>
+        <Card titulo="programacion" texto="loremdklasjldksajkldh alskdkjsadh alskjdfklsadj"/>
+        <Card titulo="arquitectura" texto="Loem, iprsum dolor sit amet consectetur adipisicing elit. Perferendis perspiciatis"/>
+        <Card titulo="Medico" texto="Loem, iprsum dolor sit amet consectetur adipisicing elit. Perferendis perspiciatis corrupti natus, aperiam facere laudantium illo necessitatibus possimus, similique excepturi consequuntur molestiae. Cum sapiente est dolor id deserunt, temporibus molestias"/>
+        <Card titulo="Desarrollo" texto="Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure iusto quaerat delectus corrupti numquam corporis saepe quod minima enim esse, aperiam harum ipsam dolores voluptatum? Debitis iste tempora aspernatur soluta sapiente nam corrupti doloribus quis praesentium voluptate quae alias eius reprehenderit ut, fuga explicabo placeat eveniet dolore quasi perferendis. Accusantium? Loem, iprsum dolor sit amet consectetur adipisicing elit. Perferendis perspiciatis corrupti natus, aperiam facere laudantium illo necessitatibus possimus, similique excepturi consequuntur molestiae. Cum sapiente est dolor id deserunt, temporibus molestias.lore"/>
 
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-
-    <Card titulo="programacion" texto="loremdklasjldksajkldh alskdkjsadh alskjdfklsadj"/>
-    <Card titulo="arquitectura" texto="Loem, iprsum dolor sit amet consectetur adipisicing elit. Perferendis perspiciatis"/>
-    <Card titulo="Medico" texto="Loem, iprsum dolor sit amet consectetur adipisicing elit. Perferendis perspiciatis corrupti natus, aperiam facere laudantium illo necessitatibus possimus, similique excepturi consequuntur molestiae. Cum sapiente est dolor id deserunt, temporibus molestias"/>
-    <Card titulo="Desarrollo" texto="Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure iusto quaerat delectus corrupti numquam corporis saepe quod minima enim esse, aperiam harum ipsam dolores voluptatum? Debitis iste tempora aspernatur soluta sapiente nam corrupti doloribus quis praesentium voluptate quae alias eius reprehenderit ut, fuga explicabo placeat eveniet dolore quasi perferendis. Accusantium? Loem, iprsum dolor sit amet consectetur adipisicing elit. Perferendis perspiciatis corrupti natus, aperiam facere laudantium illo necessitatibus possimus, similique excepturi consequuntur molestiae. Cum sapiente est dolor id deserunt, temporibus molestias.lore"/>
-    
-</body>
-</html>
+    </Layout>
