--- a/src/componentes/layout.astro
+++ b/src/componentes/layout.astro
@@ -1,6 +1,12 @@
 ---
-const saludo = "Proyecto de astroooo!!";
-const subMenu = [{name: "Inicio", link: "./index.html"}, {name:"Productos", link: "./productos/index.html"}, {name:"Nosotros", link: "./nosotros/index.html"}, {name: "post", link: "./post/index.html"}, {name: "Mis Servicios", link: "./misservicios/index.html"}];
+
+const subMenu = [{name: "Inicio", link: "../index.html"}, {name:"Productos", link: "../productos/index.html"}, {name:"Nosotros", link: "../nosotros/index.html"}, {name: "post", link: "../post/index.html"}, {name: "Mis Servicios", link: "../misservicios/index.html"}];
+
+const isLinkActive = (link) => {
+  return import.meta.env.PATH.endsWith(link);
+
+};
+
 ---
 
 <!DOCTYPE html>
@@ -15,14 +21,55 @@ const subMenu = [{name: "Inicio", link: "./index.html"}, {name:"Productos", link
         <div class="nombrePagina"><p>Nombre de la web</p></div>
         <div class="subMenu">
             <ul>
-            {subMenu.map(menus => <a href={menus.link}><li>{menus.name}</li></a>)}
+            {subMenu.map(menus => (<a href={menus.link} class={isLinkActive(menus.link)? 'active': ''}><li>{menus.name}</li></a>))}
             </ul>
         </div>
     </header>
     <main>
         <slot/>
     </main>
-
-    
+   
 </body>
+
+<style>
+    	.subMenu {
+		display: flex;
+		flex-wrap: wrap;
+		justify-content: end;
+	}
+
+    .subMenu a.active li {
+        /* Estilos para el enlace activo */
+        color: red; /* Puedes personalizar esto según tus necesidades */
+        font-weight: bold;
+    }
+
+	.nombrePagina{
+		display: flex;
+		width: 15vw;
+		border: black solid 1px;
+		align-items: center;
+		justify-content: center;
+
+		
+	}
+
+	.nombrePagina p{
+		font-family: 'Times New Roman', Times, serif;
+		font-size: x-large;
+		text-shadow: 5px;
+
+		
+	}
+	.subMenu ul{
+		display: flex;
+		width: 75vw;
+
+
+		justify-content: space-around;
+		list-style-type: none;
+	}
+</style>
+
+
 </html>
