--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,53 +1,24 @@
-
 ---
-import Layout from '../componentes/layout.astro'
+const saludo = "Proyecto de astroooo!!";
+
+
+import Card from "../componentes/card.astro";
+import Layout from "../componentes/layout.astro"
 ---
 
-<main>
+<Layout>
 	<h1>{saludo}</h1>
 	<h2>Titulo 1</h2>
 	<h3>Titulo 2</h3>
 	<section>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit obcaecati libero, ducimus eaque consectetur quaerat quis corporis perspiciatis, hic eligendi quisquam vel a nobis sed architecto eos praesentium voluptatum consequatur atque distinctio! Ipsum quidem amet error praesentium at corrupti ut, ratione eveniet adipisci possimus sequi soluta vitae, quia ullam nulla!</section>
 	<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe, labore rerum explicabo distinctio ipsa libero minus cumque animi voluptates quae et nihil officiis.</p>
-</main>
-
-
-
-
-
+	<div class="inicio">
+		<Card titulo="programacion" texto="loremdklasjldksajkldh alskdkjsadh alskjdfklsadj"/>
+	</div>
+</Layout>
 
 <style>
-	.subMenu {
-		display: flex;
-		flex-wrap: wrap;
-		justify-content: end;
-	}
 
-	.nombrePagina{
-		display: flex;
-		width: 15vw;
-		border: black solid 1px;
-		align-items: center;
-		justify-content: center;
-
-		
-	}
-
-	.nombrePagina p{
-		font-family: 'Times New Roman', Times, serif;
-		font-size: x-large;
-		text-shadow: 5px;
-
-		
-	}
-	.subMenu ul{
-		display: flex;
-		width: 75vw;
-
-
-		justify-content: space-around;
-		list-style-type: none;
-	}
 
 
 	main { 
