--- a/src/pages/misservicios.astro
+++ b/src/pages/misservicios.astro
@@ -4,7 +4,7 @@ import Layout from "../componentes/layout.astro"
 
 ---
 
-    <Layout>
+    <Layout pageTitle="Nuestros Servicios">
         <Card titulo="programacion" texto="loremdklasjldksajkldh alskdkjsadh alskjdfklsadj"/>
         <Card titulo="arquitectura" texto="Loem, iprsum dolor sit amet consectetur adipisicing elit. Perferendis perspiciatis"/>
         <Card titulo="Medico" texto="Loem, iprsum dolor sit amet consectetur adipisicing elit. Perferendis perspiciatis corrupti natus, aperiam facere laudantium illo necessitatibus possimus, similique excepturi consequuntur molestiae. Cum sapiente est dolor id deserunt, temporibus molestias"/>
