--- a/src/pages/nosotros.astro
+++ b/src/pages/nosotros.astro
@@ -1,7 +1,7 @@
 ---
 import Layout from "../componentes/layout.astro"
 ---
-<Layout>
+<Layout pageTitle="Sobre Nostros">
     <h1>Sobre nosotros</h1>
     <section>
         <p><strong>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Modi doloribus maiores voluptate?</strong></p>
