--- a/src/pages/post.astro
+++ b/src/pages/post.astro
@@ -7,7 +7,7 @@ import Layout from "../componentes/layout.astro"
 
 ---
 
-<Layout>
+<Layout pageTitle="Posteos" claseActiva = "botonPost">
 
     <h1><u>Mis post's</u></h1>
     
