--- a/src/pages/productos.astro
+++ b/src/pages/productos.astro
@@ -1,7 +1,7 @@
 ---
 import Layout from "../componentes/layout.astro"
 ---
-<Layout>
+<Layout pageTitle="Productos">
     <h1>Nuestros productos</h1>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam fuga accusamus tempore tenetur rem numquam optio tempora, dolor velit repellat dolorem odit dicta autem amet! Minima, inventore impedit ut culpa cupiditate voluptate laudantium aspernatur similique qui.</p>
 </Layout>
