--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -6,7 +6,7 @@ import Card from "../componentes/card.astro";
 import Layout from "../componentes/layout.astro"
 ---
 
-<Layout pageTitle="Pagina inicial" claseActiva = "botonInicio">
+<Layout pageTitle="Pagina inicial">
 	<h1>{saludo}</h1>
 	<h2>Titulo 1</h2>
 	<h3>Titulo 2</h3>
